// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | CssGrid Conditionally Hidden Good Way Hidden 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top top" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Conditionally Hidden Good Way Shown 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left content content";
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: left;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  display: none;
  grid-area: none;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Conditionally Hidden Wrong Way Hidden 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top top" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Conditionally Hidden Wrong Way Shown 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top top" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Css Grid With Custom Gutter 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top sidebar" "left content sidebar" "left content sidebar";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 0px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 0px 1fr 0px 1fr;
  -ms-grid-columns: 1fr 0px 1fr 0px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: left;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: content;
}

.c5 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: sidebar;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      Top
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c2"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Css Grid With Custom Template Columns 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top sidebar" "left content sidebar" "left content sidebar";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 25fr 50fr 25fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 20px 1fr 20px 1fr;
  -ms-grid-columns: 25fr 20px 50fr 20px 25fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: left;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: content;
}

.c5 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: sidebar;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      Top
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c2"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Css Grid With Different Layouts For Different Screen Sizes 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "top top" "left sidebar" "content sidebar";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 50fr 50fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 20px 1fr 20px 1fr;
  -ms-grid-columns: 50fr 20px 50fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: left;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 5;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c5 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: sidebar;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

@media (min-width:760px) {
  .c0 {
    grid-template-areas: "left top sidebar" "left content sidebar" "left content sidebar";
    grid-template-rows: auto 1fr 1fr;
    grid-template-columns: 25fr 50fr 25fr;
    grid-gap: 20px;
    display: -ms-grid;
    -ms-grid-rows: auto 20px 1fr 20px 1fr;
    -ms-grid-columns: 25fr 20px 50fr 20px 25fr;
  }
}

@media (min-width:760px) {
  .c1 {
    -ms-grid-row: 1;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 5;
    display: block;
    grid-area: left;
  }
}

@media (min-width:760px) {
  .c3 {
    -ms-grid-row: 1;
    -ms-grid-column: 3;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: top;
  }
}

@media (min-width:760px) {
  .c4 {
    -ms-grid-row: 3;
    -ms-grid-column: 3;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 3;
    display: block;
    grid-area: content;
  }
}

@media (min-width:760px) {
  .c5 {
    -ms-grid-row: 1;
    -ms-grid-column: 5;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 5;
    display: block;
    grid-area: sidebar;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      Top
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c2"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Css Grid With Object As Gutter And Custom Sized Columns 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top messages" "left top order" "left top sidebar" "left top sidebar" "left content sidebar";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 1fr 2fr 1fr;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 24px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 24px 1fr 24px 1fr;
  -ms-grid-columns: 1fr 16px 2fr 16px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 9;
  display: block;
  grid-area: left;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 7;
  display: block;
  grid-area: top;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 9;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c5 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: messages;
}

.c6 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: order;
}

.c7 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 5;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 5;
  display: block;
  grid-area: sidebar;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      Top
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c2"
    >
      Messages
    </div>
  </div>
  <div
    className="c6"
  >
    <div
      className="c2"
    >
      Order
    </div>
  </div>
  <div
    className="c7"
  >
    <div
      className="c2"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Shown On Md Hidden On Small Screens 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left content content" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  display: none;
  grid-area: none;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: content;
}

.c5 {
  box-sizing: border-box;
  min-width: 0;
  display: none;
  grid-area: none;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

@media (min-width:976px) {
  .c0 {
    grid-template-areas: "left" "top" "content";
    grid-template-rows: auto auto;
    grid-template-columns: 1fr;
    grid-gap: 20px;
    display: -ms-grid;
    -ms-grid-rows: auto 20px auto;
    -ms-grid-columns: 1fr;
  }
}

@media (min-width:976px) {
  .c1 {
    -ms-grid-row: 1;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: left;
  }
}

@media (min-width:976px) {
  .c3 {
    -ms-grid-row: 3;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: top;
  }
}

@media (min-width:976px) {
  .c4 {
    -ms-grid-row: 5;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: content;
  }
}

@media (min-width:976px) {
  .c5 {
    display: none;
    grid-area: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c2"
    >
      something that doesn‘t exist
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Shown On Small Screen Sizes Hidden On Md 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "left top top" "left content content";
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: auto 20px auto;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 3;
  display: block;
  grid-area: left;
}

.c5 {
  box-sizing: border-box;
  min-width: 0;
  display: none;
  grid-area: none;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: top;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 3;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

@media (min-width:976px) {
  .c0 {
    grid-template-areas: "left" "content";
    grid-template-rows: auto auto;
    grid-template-columns: 1fr;
    grid-gap: 20px;
    display: -ms-grid;
    -ms-grid-rows: auto 20px auto;
    -ms-grid-columns: 1fr;
  }
}

@media (min-width:976px) {
  .c1 {
    -ms-grid-row: 1;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: left;
  }
}

@media (min-width:976px) {
  .c5 {
    display: none;
    grid-area: none;
  }
}

@media (min-width:976px) {
  .c3 {
    display: none;
    grid-area: none;
  }
}

@media (min-width:976px) {
  .c4 {
    -ms-grid-row: 3;
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row-span: 1;
    display: block;
    grid-area: content;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      <div>
        This item is mounted and stays mounted no matter what. However, it‘d be hidden with css
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c2"
    >
      something that doesn‘t exist
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Simple Css Grid 1`] = `
.c0 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "header header header" "menu content ads" "footer footer footer";
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  display: -ms-grid;
  -ms-grid-rows: 1fr 20px 1fr 20px 1fr;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
}

.c1 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 1;
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: header;
}

.c3 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 3;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: content;
}

.c4 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 1;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: menu;
}

.c5 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 3;
  -ms-grid-column: 5;
  -ms-grid-column-span: 1;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: ads;
}

.c6 {
  box-sizing: border-box;
  min-width: 0;
  -ms-grid-row: 5;
  -ms-grid-column: 1;
  -ms-grid-column-span: 5;
  -ms-grid-row-span: 1;
  display: block;
  grid-area: footer;
}

.c2 {
  box-sizing: border-box;
  border: 1px solid black;
  background-color: #eee;
  height: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Header
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c2"
    >
      Content
    </div>
  </div>
  <div
    className="c4"
  >
    <div
      className="c2"
    >
      Menu
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c2"
    >
      Ads
    </div>
  </div>
  <div
    className="c6"
  >
    <div
      className="c2"
    >
      Footer
    </div>
  </div>
</div>
`;
